<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.d3ifcool.counterpulsa.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/loginThemeGrayLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="64dp"
            android:background="@drawable/background_login"
            android:id="@+id/portalIdentity">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/blue"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeGrayLight"
                android:text="@string/portal_login"
                android:textAlignment="center"
                android:textSize="32sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/loginThemeWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="-32dp"
            android:layout_below="@id/portalIdentity"
            android:id="@+id/portalCard">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/portal_login_username"
                android:layout_marginTop="16dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/portal_login_username_hint"
                android:id="@+id/login_username_field"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@mipmap/ic_person"
                android:drawablePadding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/portal_login_password" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/portal_login_password_hint"
                android:id="@+id/login_password_field"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@mipmap/ic_lock"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_login"
                android:layout_marginBottom="16dp"
                android:text="@string/portal_login_button"
                android:id="@+id/loginButton"
                android:textColor="@color/loginThemeWhite" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_register"
                android:layout_marginBottom="16dp"
                android:text="@string/portal_register_button"
                android:id="@+id/registerButtonJump"
                android:textColor="@color/loginThemeWhite"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/loginThemeWhiteDark"
            android:layout_below="@id/portalCard"
            android:layout_marginHorizontal="32dp"/>

    </RelativeLayout>

</ScrollView>
