<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.d3ifcool.counterpulsa.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/loginThemeGrayLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="64dp"
            android:background="@drawable/background_main"
            android:id="@+id/portalIdentity">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/red"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeGrayLight"
                android:text="@string/menu_akun"
                android:textAlignment="center"
                android:textSize="32sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/loginThemeWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="-32dp"
            android:layout_below="@id/portalIdentity"
            android:id="@+id/portalSaldo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_label"
                android:textAlignment="center"
                android:textSize="16dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RP."
                    android:textSize="32sp"
                    android:paddingRight="8dp"
                    android:id="@+id/labelCurrency"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="32sp"
                    android:layout_toRightOf="@id/labelCurrency"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/loginThemeWhiteDark"
            android:layout_below="@id/portalSaldo"
            android:layout_marginHorizontal="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/loginThemeWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/portalSaldo"
            android:id="@+id/portalCard">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/profile_ktp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="123456789"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/profile_nama"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="Andy Maulana Yusuf"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/profile_email"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="aitek230telu@std.unissula.ac.id"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/profile_phone"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="082188432070"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/profile_username"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="aitek230telu"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/profile_password"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="-"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main"
                android:text="@string/profile_button_edit"
                android:id="@+id/edit_profile"
                android:textColor="@color/loginThemeWhite"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/loginThemeWhiteDark"
            android:layout_below="@id/portalCard"
            android:layout_marginHorizontal="32dp" />

        <ImageView
            android:id="@+id/logout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_off"
            android:layout_margin="8dp" />

    </RelativeLayout>

</ScrollView>