<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.d3ifcool.counterpulsa.OptionService">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/loginThemeGrayLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="64dp"
            android:background="@drawable/background_main"
            android:id="@+id/portalIdentity">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/red"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeGrayLight"
                android:text="@string/menu_service"
                android:textAlignment="center"
                android:textSize="32sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/loginThemeWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="-32dp"
            android:layout_below="@id/portalIdentity"
            android:id="@+id/portalSaldo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_label"
                android:textAlignment="center"
                android:textSize="16dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RP."
                    android:textSize="32sp"
                    android:paddingRight="8dp"
                    android:id="@+id/labelCurrency"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="32sp"
                    android:layout_toRightOf="@id/labelCurrency"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/loginThemeWhiteDark"
            android:layout_below="@id/portalSaldo"
            android:layout_marginHorizontal="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/loginThemeWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/portalSaldo"
            android:id="@+id/portalCard">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/service_nama_form"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Pulsa 5 Ribu"
                android:id="@+id/service_nama"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/service_harga_form"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="6000"
                android:id="@+id/service_harga"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginThemeTextBlack"
                android:text="@string/service_status_form"
                android:layout_marginTop="16dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/service_ya"
                    android:text="Aktif"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/service_tidak"
                    android:text="Tidak Aktif"/>

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main"
                android:text="@string/simpan_perubahan"
                android:id="@+id/update_service"
                android:layout_marginTop="16dp"
                android:textColor="@color/loginThemeWhite"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/loginThemeWhiteDark"
            android:layout_below="@id/portalCard"
            android:layout_marginHorizontal="32dp" />

        <ImageView
            android:id="@+id/logout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_off"
            android:layout_margin="8dp" />

    </RelativeLayout>

</ScrollView>